2013-01-24  Yury Aliaev  <mutab0r@rambler.ru>
	* app/envelope-box.[ch]: zooming (Ctrl) and horizontal scrolling (Shift) by
	mouse wheel; sustain and loop lines are now dislayed.

2013-01-22  Yury Aliaev  <mutab0r@rambler.ru>
	* app/envelope-box.c, app/gui.c, app/gui-subs.[ch] envelope-box.xml:
	right-click on the envelope point makes it current. Right click on the
	envelope editor canvas (outside points) pops up the menu (currently with
	zoom functions only).

2013-01-21  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c, app/instrument-editor.c, app/main.c, app/xm.[ch]: the return
	value of fwrite() is handled, file errors while saving are now reported.

2013-01-18  Yury Aliaev  <mutab0r@rambler.ru>
	* app/envelope-box.[ch]: Goo canvas are used instead of Gnome canvas. The
	last dependency on Gnome is dropped! Current point is highlit. Code is
	cleaned up and bugfixed;
	* app/instrument-editor.c: the bug with sliders displaying is fixed;
	* app/gui-subs.[ch], app/playlist.c, app/sample-editor.c: Gtk+-2 native
	function is used instead of self-made workaround.

2012-12-19  Yury Aliaev  <mutab0r@rambler.ru>
	* app/file-operations.c: Gtk hacks now performed at run time, no extra
	headers required at compilation.

2012-12-19  Yury Aliaev  <mutab0r@rambler.ru>
	* app/cheat-sheet.c, app/menubar.c: XM Effects Cheat Sheet is ported from
	obsolete code to libGtkHTML, thus allowing improved formating.

2012-12-17  Yury Aliaev  <mutab0r@rambler.ru>
	* drivers/file-output.c: the return value of some GLIBC syscalls
	is checked to avoid compiler warnings and better debugging;
	* app/audioconfig.c, app/gui.c, app/gui-settings.c, 
	app/instrument-editor.c, app/keys.c/ app/menubar.c, app/midi-settings-*.c,
	app/sample-editor.c, app/track-editor.c: the code is cleaned up from 
	Gnome residuals (excluding Canvas stuff);
	* local headers app/gettext.h and app/i18n.h are dropped in favour of
	glibc/gi18n.h.

2012-12-11  Yury Aliaev  <mutab0r@rambler.ru>