@@ -30,6 +30,7 @@
 #include <glib.h>
 
 #include "mixer.h"
+#include "gui.h"
 
 /* -- XM definitions -- */
 
@@ -166,10 +167,12 @@ xm_get_modified (void)
 static inline void
 xm_set_modified (int val)
 {
-    extern XM *xm;
-    if(xm != NULL) {
-	xm->modified = val;
-    }
+	extern XM *xm;
+
+	if(xm != NULL && xm->modified != val) {
+		xm->modified = val;
+		gui_update_title(NULL);
+	}
 }
 
 void
